--- a/ComputerInfoAgent.Configuator/ComputerInfoAgent.Configuator.csproj
+++ b/ComputerInfoAgent.Configuator/ComputerInfoAgent.Configuator.csproj
@@ -6,4 +6,17 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Fonts\Poppins-Regular.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
+    <Folder Include="MVVM\Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\Poppins-Regular.ttf" />
+  </ItemGroup>
+
 </Project>
